[project]
name = "mlbasetoolkit"
version = "0.0.1"
authors = [
  { name="Stephane Mebenga", email="stephcyril.sc@gmail.com" },
]
description = "This is a ML toolkit that aims to help you when you have a ML heavy project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/stephcyrille/base-ml-toolkit"
Issues = "https://github.com/stephcyrille/base-ml-toolkit/issues"