[metadata]
name = mlbasetoolkit
version = 1.0.0
author = Stephane Mebenga
author_email = stephcyril.sc@gmail.com
description = This is a ML toolkit that aims to help you when you have a ML heavy project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stephcyrille/base-ml-toolkit
project_urls =
    Bug Tracker = https://github.com/stephcyrille/base-ml-toolkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'